@@ -1,6 +1,8 @@
-* Stylesheet restructured, enabling style overrides in widgets
+* Added a combobox widget.
 
-* Improved stylesheet performance applying styles only in Window and Menu widgets
+* Stylesheet restructured, enabling style overrides in widgets.
+
+* Improved stylesheet performance applying styles only in Window and Menu widgets.
 
 * Buttons can optionally have the frame removed using the setHasFrame() method or the hasFrame argument to the constructor. Additionally they no longer have minimum sizes defined by the stylesheet.
 
